fixed: Dialog-form DOM shift

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -260,13 +260,10 @@ ul {
     position: relative;
     background-image: url('../assets/imgs/Group 13.png');
     background-size: cover;
-    margin-top: 60px;
     width: 120px;
     height: 120px;
     opacity: 1;
 }
-
-
 .contact-item {
     display: flex;
     flex-direction: column;
